# omnin-app-v2

./: AGENTS.md  README.md  compose.yml
.clinerules/: default-instruction.md
.devcontainer/: Dockerfile  devcontainer.json
.github/workflows/: api-test.yaml  frontend-test.yaml
api/: .env.example  .gitignore  AGENTS.md  Dockerfile  README.md  pyproject.toml
api/examples/: owner_agent_run.py
api/src/: config.py  main.py
api/src/core/v1/agents/: owner_agent.py
api/src/core/v1/instructions/: owner_agent_instruction.py
api/src/core/v1/models/: owner_agent_request_model.py  owner_agent_response_model.py
api/src/core/v1/tools/: agent_spec_tools.py  send_mail_tools.py  task_split_judge_tool.py
api/src/infra/repositories/: exceptions.py
api/src/infra/repositories/generated_agent/: __init__.py  di.py  in_memory_repository.py  interface.py  postgres_repository.py  types.py
api/src/infra/repositories/generated_agent_messages/: di.py  in_memory_repository.py  interface.py  postgres_repository.py  types.py
api/src/infra/session/: session_store_interface.py  sqlite_session.py
api/src/routes/agents/: generated_agent_route.py
api/src/routes/health/: health_route.py
api/src/routes/realtime/: realtime_route.py
docs/db/: TEMPLATE.md  schema.md  workflow-persistence-api-spec.md
docs/onet/: spec_job-search.md
frontend/: .env.example  AGENTS.md  Dockerfile  README.md  package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: Header.tsx
kubernetes/manifests/: postgres.yaml
(+38 files in other folders)
